test/error/syn/noSemicolon.tig
let
	var n := 0
in
	n := 0;
	n := 1
	n := 2
end
